--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,10 @@ exclude =
     env/
 per-file-ignores =
   settings.py:E501
+
+[mypy]
+plugins =
+    mypy_django_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = "myproject.settings"
